--- a/views/deptviews.xml
+++ b/views/deptviews.xml
@@ -2,16 +2,14 @@
   <data>
     <!-- explicit list view definition -->
 
-    <record model="ir.ui.view" id="employe1_list">
-      <field name="name">employe1 list</field>
+    <record model="ir.ui.view" id="department_list">
+      <field name="name">department list</field>
       <field name="model">employe1.department</field>
       <field name="arch" type="xml">
         <tree>
           <field name="name"/>
-          <field name="age"/>
-          <field name="gender"/>
-          <field name="phone"/>
-          <field name="dept"/>
+          <field name="depno"/>
+          <field name="empname"/>
         </tree>
       </field>
     </record>
@@ -20,7 +18,7 @@
     <!-- actions opening views on models -->
 
     <record model="ir.actions.act_window" id="department_action_window">
-      <field name="name">employe1 window</field>
+      <field name="name">department window</field>
       <field name="res_model">employe1.department</field>
       <field name="view_mode">tree,form</field>
     </record>
@@ -32,17 +30,17 @@
 
     <!-- Top menu item -->
 
-    <menuitem name="employe1" id="department_menu_root"/>
+    <menuitem name="department" id="department_menu_root"/>
 
     <!-- menu categories -->
 
-    <menuitem name="employee" id="department-menu_1" parent="department_menu_root"/>
-    <menuitem name="department" id="department_menu_2" parent="department-menu_root"/>
+    <menuitem name="department" id="department_menu_1" parent="department_menu_root"/>
+    <menuitem name="department" id="department_menu_2" parent="department_menu_root"/>
 
     <!-- actions -->
 
-    <menuitem name="employee" id="department.menu_1_list" parent="department_menu_1"
-              action="department.action_window"/>
+    <menuitem name="department" id="department_menu_1_list" parent="department_menu_1"
+              action="department_action_window"/>
     
     
 
