--- a/views/views.xml
+++ b/views/views.xml
@@ -26,21 +26,41 @@
     </record>
 
 
-    <!-- server action to the one above -->
+    <!-- departments action to the one above -->
+    <record model="ir.ui.view" id="department_list">
+      <field name="name">department list</field>
+      <field name="model">employe1.department</field>
+      <field name="arch" type="xml">
+        <tree>
+          <field name="name"/>
+          <field name="depno"/>
+          <field name="empname"/>
+       </tree>
+      </field>
+   </record>
+   <!-- actions opening views on models -->
+    <record model="ir.actions.act_window" id="department_action_window">
+      <field name="name">department window</field>
+      <field name="res_model">employe1.department</field>
+      <field name="view_mode">tree,form</field>
+    </record>
     
     <!-- Top menu item -->
 
-    <menuitem name="employee" id="employee_menu_root"/>
+    <menuitem name="Employee Details" id="employee_menu_root"/>
 
     <!-- menu categories -->
 
-    <menuitem name="employee" id="employee_menu_1" parent="employee_menu_root"/>
-    <menuitem name="department" id="employee_menu_2" parent="employee_menu_root"/>
+    <menuitem name="employee details" id="employee_menu_1" parent="employee_menu_root"/>
+    
 
     <!-- actions -->
+    
 
     <menuitem name="employee" id="employee_menu_1_list" parent="employee_menu_1"
               action="employee_action_window"/>
+    <menuitem name="department" id="employee_menu_2" parent="employee_menu_1"
+               action="department_action_window"/>          
     
     
 
